# z2p-newsletter-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deploy.js  heroku.yml
.github/workflows/: ci.yml
config/: base.yaml
migrations/: 20230424170446_make_status_not_null_in_subscriptions.sql  20230510192016_seed_user.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/libs/: mod.rs
src/routes/: newsletter.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
src/services/: email.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
